crates/analyzer/tests/snapshots/errors__const_expr.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: expression is not a constant
  ┌─ compile_errors/const_expr.fe:3:33
  │
3 │         let array: Array<i32, { (1, 2) }>
  │                                 ^^^^^^ expression is required to be constant here

error: feature not yet implemented: non numeric type const generics
  ┌─ compile_errors/const_expr.fe:6:33
  │
6 │         let array: Array<i32, { "FOO" }>
  │                                 ^^^^^ not yet implemented

error: zero division error
  ┌─ compile_errors/const_expr.fe:9:38
  │
9 │         let array: Array<i32, { 1 - (3 / 0) }>
  │                                      ^^^^^ zero division occurred during constant evaluation

error: zero division error
   ┌─ compile_errors/const_expr.fe:12:38
   │
12 │         let array: Array<i32, { 1 - (3 % 0) }>
   │                                      ^^^^^ zero division occurred during constant evaluation

error: overflow error
   ┌─ compile_errors/const_expr.fe:15:33
   │
15 │         let array: Array<i32, { 1 << 256 }>
   │                                 ^^^^^^^^ overflow occurred during constant evaluation

error: overflow error
   ┌─ compile_errors/const_expr.fe:18:33
   │
18 │         let array: Array<i32, { 0 - 1 }>
   │                                 ^^^^^ overflow occurred during constant evaluation


